[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbal"
version = "0.1.0"
description = "C-BAL: Compute BAseLine — AutoML Time Series Forecasting. The starting point of your modeling journey."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Jaehong Yu", email = "jaehongyu0105@gmail.com"},
]
keywords = ["time-series", "forecasting", "automl", "machine-learning", "baseline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
]

[project.optional-dependencies]
stats = [
    "statsforecast>=1.7",
]
tabular = [
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "catboost>=1.2",
]
deep = [
    # torch is required but NOT pinned here — NVIDIA containers,
    # conda envs, and custom builds often have non-standard versions.
    # Install torch manually first, then: pip install -e ".[deep]"
    # "torch>=2.0",  # uncomment if installing from PyPI
]
ssm = [
    # Mamba SSM models (MambaTS, S-Mamba) — CUDA only
    "mamba-ssm>=2.0",
    "causal-conv1d>=1.2",
]
foundation = [
    # Foundation model wrappers — install individually as needed:
    # Chronos-2:  pip install chronos-forecasting
    # TimesFM:    pip install timesfm
    # Moirai:     pip install uni2ts
    # TTM:        pip install tsfm_public
    # Toto:       pip install toto-benchmark
]
serving = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]
all = [
    "cbal[stats,tabular,deep,ssm,foundation,serving]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/codespermuted/cbal"
Repository = "https://github.com/codespermuted/cbal"
Issues = "https://github.com/codespermuted/cbal/issues"

[project.scripts]
cbal = "cbal.cli:main"

[tool.setuptools.packages.find]
include = ["cbal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"
